<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>io.quarkiverse</groupId>
    <artifactId>quarkiverse-parent</artifactId>
    <version>21</version>
  </parent>
  <groupId>io.quarkiverse.amazonservices</groupId>
  <artifactId>quarkus-amazon-services-parent</artifactId>
  <version>999-SNAPSHOT</version>
  <packaging>pom</packaging>
  <name>Quarkus - Amazon Services - Parent</name>
  <modules>
    <module>bom-internal</module>
    <module>bom</module>
    <module>build-parent</module>
    <module>codegen</module>
    <module>codegen-maven-plugin</module>
    <module>common</module>
    <module>crt</module>    
    <module>devservices</module>
    <module>cognito-user-pools</module>
    <module>dynamodb-enhanced</module>
    <module>scheduler</module>
    <module>s3</module>
    <module>s3-transfer-manager</module>
    <module>sqs</module>
    <module>quarkus-messaging-amazon-sqs</module>
    <module>services</module>
    <module>integration-tests</module>
  </modules>
  <scm>
    <connection>:git:git@github.com:quarkiverse/quarkus-amazon-services.git</connection>
    <developerConnection>scm:git:git@github.com:quarkiverse/quarkus-amazon-services.git</developerConnection>
    <url>https://github.com/quarkiverse/quarkus-amazon-services</url>
    <tag>HEAD</tag>
  </scm>
  <properties>
    <compiler-plugin.version>3.11.0</compiler-plugin.version>
    <maven.jar.plugin.version>3.5.0</maven.jar.plugin.version>
    <maven.compiler.parameters>true</maven.compiler.parameters>
    <maven.compiler.source>17</maven.compiler.source>
    <maven.compiler.target>17</maven.compiler.target>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    <!-- https://github.com/quarkusio/quarkus/releases -->
    <quarkus.version>3.32.2</quarkus.version>

    <!-- https://github.com/aws/aws-sdk-java-v2/releases -->
    <awssdk.version>2.41.18</awssdk.version>
    
    <!-- https://github.com/awslabs/aws-crt-java/releases -->
    <awscrt.version>0.43.6</awscrt.version>
    
    <javapoet.version>1.13.0</javapoet.version>
    <hamcrest.version>1.3</hamcrest.version>
    <assertj.version>3.27.7</assertj.version>
  </properties>
  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>io.quarkus</groupId>
          <artifactId>quarkus-maven-plugin</artifactId>
          <version>${quarkus.version}</version>
        </plugin>
        <plugin>
          <groupId>io.quarkus</groupId>
          <artifactId>quarkus-config-doc-maven-plugin</artifactId>
          <version>${quarkus.version}</version>
        </plugin>
        <plugin>
          <groupId>io.quarkus</groupId>
          <artifactId>quarkus-extension-maven-plugin</artifactId>
          <version>${quarkus.version}</version>
          <executions>
            <execution>
              <phase>compile</phase>
              <goals>
                <goal>extension-descriptor</goal>
              </goals>
              <configuration>
                <deployment>${project.groupId}:${project.artifactId}-deployment:${project.version}</deployment>
              </configuration>
            </execution>
          </executions>
        </plugin>
        <plugin>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>${compiler-plugin.version}</version>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>
  <profiles>
    <profile>
      <id>docs</id>
      <activation>
        <property>
          <name>performRelease</name>
          <value>!true</value>
        </property>
      </activation>
      <modules>
        <module>docs</module>
      </modules>
    </profile>
  </profiles>
</project>
